--- a/src/toolbar/toolbar.component.css
+++ b/src/toolbar/toolbar.component.css
@@ -32,7 +32,7 @@ p {
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #1976d2;
+  background-color: #c049cf;
   color: white;
   font-weight: 600;
 }
@@ -62,7 +62,7 @@ p {
   padding: 0 16px;
   max-width: 960px;
   flex-direction: column;
-  align-items: left;
+  align-items: center;
 }
 
 svg.material-icons {
@@ -81,7 +81,7 @@ svg.material-icons:not(:last-child) {
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
+  justify-content: center;
   margin-top: 16px;
 }
 
