--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -60,9 +60,8 @@ p {
   display: flex;
   margin: 82px auto 32px;
   padding: 0 16px;
-  max-width: 960px;
   flex-direction: column;
-  align-items: left;
+  align-items: center;
 }
 
 svg.material-icons {
@@ -132,6 +131,10 @@ svg.material-icons:not(:last-child) {
   width: auto;
   min-width: 30%;
   position: relative;
+}
+
+.container {
+  margin-top: 30px;
 }
 
 .card.card.highlight-card span {
