--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,19 +18,47 @@
       <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
         <h2>Prueba tu suerte</h2>
         <p>Verifica si puedes ganar un premio:</p>
+        <div class="alert alert-success alert-dismissible winner" role="alert" *ngIf="winner.name && hasWin">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="onCloseWinner()"><span aria-hidden="true">&times;</span></button>
+          <h1>
+            <strong>GANASTE!</strong> Felicidades {{ winner.name }}.
+          </h1>
+        </div>
+        <div class="alert alert-danger alert-dismissible winner" role="alert" *ngIf="winner.name && hasLost">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="onCloseLoser()"><span aria-hidden="true">&times;</span></button>
+          <h1>
+            Lo sentimos! Sigue intentando.
+          </h1>
+        </div>
         <form [formGroup]="luckForm" (ngSubmit)="onSubmit()">
           <div id="user-data">
             <div class="form-group">
-              <label for="username">Nombre completo</label>
-              <input type="text" id="username" class="form-control" formControlName="username">
+              <label for="name">Nombre completo</label>
+              <input type="text" id="name" class="form-control" formControlName="name">
             </div>
             <div class="form-group">
               <label for="email">Mail</label>
               <input type="email" id="email" class="form-control" formControlName="email">
             </div>
           </div>
-          <button class="btn btn-primary" type="submit">Submit</button>
+          <button class="btn btn-primary" type="submit" [disabled]="!luckForm.valid">
+            <span class="glyphicon glyphicon-refresh spinning" *ngIf="isLoading"></span>
+            Enviar
+          </button>
         </form>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+        <h2>Ultimos resultados</h2>
+        <h4>Los ultimos 5 ganadores se muestran aqui:</h4>
+        <div class="alert alert-success" role="alert" *ngFor="let luckyperson of luckyPersons">
+          <strong>Felicidades!</strong>
+          {{ luckyperson.name }} has tenido mucha suerte. Revisa tu correo {{ luckyperson.email }}
+        </div>
+        <div class="alert alert-info" role="alert" *ngIf="luckyPersons.length == 0">
+          <strong>Aún no hay ganadores!</strong>
+        </div>
       </div>
     </div>
   </div>
