--- a/src/toolbar/toolbar.component.css
+++ b/src/toolbar/toolbar.component.css
@@ -32,7 +32,7 @@ p {
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #c049cf;
+  background-color: #7869cc;
   color: white;
   font-weight: 600;
 }
